src/static/css/style.css
/* GENERAL */

html {
    box-sizing: border-box;
  }
*, *:before, *:after {
    box-sizing: inherit;
}

body {
    font-family: sans-serif;
}

/* SEARCH INPUT BAR */
#search-bar-typeahead {
    font-family: sans-serif;
    position: fixed;
    width: 500px;
    top: 100px;
    left: 50%;
    margin-left: -250px;
    z-index: 10;
    font-size: 22px; /* Set input font size */
    border: none;
    border-radius: 5px;
    border-bottom: 2px solid black;
    background-color: FLORALWHITE;
    opacity: 0.8;
}
#search-bar-typeahead > span > input.typeahead.tt-query.tt-input {
    border: none;
    border-bottom: 1px solid black;
}
.twitter-typeahead {
    display: block;
    width: 100%;
}
.typeahead, .tt-query, .tt-hint {
    height: 30px;
    line-height: 30px;
    outline: medium none;
    padding: 8px 12px;
    width: 100%;
}
.typeahead {
    opacity: 0.8;
    text-align: center;
}
.typeahead:focus {
    outline: none;
}
.tt-hint {
    display: none;
    color: #999999;
    text-align: center;
}
.tt-menu {
    background-color: #FFFFFF;
    border: 1px solid rgba(0, 0, 0, 0.2);
    border-radius: 8px;
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
    margin-top: 12px;
    padding: 8px 0;
    width: 422px;
}
.tt-suggestion {
    font-size: 22px;  /* Set suggestion dropdown font size */
    padding: 3px 20px;
}
.tt-suggestion:hover {
    cursor: pointer;
    background-color: #0097CF;
    color: #FFFFFF;
}
.tt-suggestion p {
    margin: 0;
}

/* MAIN CANVAS */
div#container {
    position: absolute;
    height: 100%;
    width: 100%;
    cursor: all-scroll;
    overflow: hidden;
    background-color: FLORALWHITE;
}

div.bottom-left {
    left: 0;
    bottom: 0;
}

div.top-right {
    top: 0;
    right: 0;
}

div.nav-bar {
    position: fixed;
    cursor: pointer;
    z-index: 99;
}

div.nav-bar ul {
    list-style-type: none;
    text-transform: lowercase;
    margin: 0;
    padding: 30px;
}

div.nav-bar li {
    display: inline-block;
    padding: 0 10px;
}

div.nav-bar li:hover {
    font-weight: bold;
}

div#canvas {
    position: relative;
    height: 700px;

    /*border: 1px solid red;*/
}

div.person {
    position: absolute;
    width: 100px;
    height: 230px;
    text-align: center;
    border-radius: 5px;
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
    background-color: white;
    cursor: pointer;
}

div.person div.hide-person {
    max-width: 30px;
    max-height: 30px;
    border-radius: 5px;
    float: right;
    background-color: lightgrey;
    opacity: 0.4;
}

div.person div.hide-person:hover {
    opacity: 0.9;
}

div.person div.hide-person img {
    width: 100%;
    padding: 4px;
}

div.person div.profile-pic {
    width: 100%;
    height: 100px;
    background-size: cover;
    border-radius: 5px 5px 0 0;
}

div.person div.gender-line {
    height: 6px;
}

div.person div.male {
    background-color: #5DADE2;
}

div.person div.female {
    background-color: #EC7063;
}

div.person div.content {
    padding: 10px;
}

div.person div.controls {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 30px;
    border-radius: 0 0 5px 5px;
    border-top: 1px solid lightgrey;
    overflow: hidden;
    background-color: GAINSBORO;
}

div.controls div.control {
    display: inline-block;
    height: 100%;
    border-top: 1px solid grey;
    opacity: 0.4;
}

div.controls div.control:hover{
    opacity: 0.9;
}

div.controls div.control img {
    margin: auto;
    padding: 4px;
    max-width: 30px;
}

div.controls .spread-1 {
    width: 100%
}
div.controls .spread-2 {
    width: 50%
}
div.controls .spread-3 {
    width: 33%
}
div.controls .spread-4 {
    width: 25%
}

div.person h3 {
    font-size: 1em;
    font-weight: bold;
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2; /* number of lines to show */
}

div.person p {
    font-size: 0.9em;
    line-height: 1em;
    margin-top: 0px;
    margin-bottom: 0.1rem;
}

div.marriage {
    position: absolute;
    width: 5px;
    height: 5px;
}

div.line {
    position: absolute;
    border: 0.5px solid gray;
}

/* MODAL */

div.modal-body h3, h4, h5 {
    text-align: center;
}

div.modal-header {
    height: 450px;
    background-size: cover;
    background-position: center;
}

div.modal-dialog {
    background-color: white;
    border-radius: 5px;
}

p.modal-bio {
    text-align: center;
}

